# ollama-forge

./: .gitignore  LICENSE  Makefile  README.md  dev-assist.md  dev-assist.mk  install.sh  ollama-main.py  pyproject.toml
builder/: build-da-linux-amd64.sh  build-da-linux-arm64.sh  build-da-windows.bat  build-dev-assist.sh  build-gui-bin.sh  build-gui-linux-amd64.sh  build-gui-linux-arm64.sh  build-gui-windows.bat  build-main.sh  install-deps-gui.sh
dev-assist/: .env.example  .gitignore  .pre-commit-config.yaml  banner.py  build.sh  chainlit.md  dev_assist.spec  main.py  pyproject.toml  requirements.txt  setup.sh  web_chat.py
dev-assist/.chainlit/: config.toml
dev-assist/build_hooks/: runtime_hook_paths.py
dev-assist/config/: settings.json
dev-assist/core/: __init__.py  ai.py  banner.py  cli_history.py  config.py  ollama_status.py  prompts.py  rag_engine.py  router.py  session.py  shell.py  vector_store.py
dev-assist/hooks/: pre-push
dev-assist/modules/: cmd_helper.py  code_audit.py  file_tool.py  git_helper.py  indexer.py  shell_exec.py  tunnel_helper.py
dev-assist/plugins/: makefile.py  telegram.py
dev-assist/public/: custom.css
dev-assist/tests/: test_rag.py  test_router.py  test_shell.py
gui/: _syspath_patch.py  attachment_handler.py  chat_renderer.py  code_runner.py  crew_dialogs.py  database.py  groq_client.py  main.py  manager_entry.py  notes_dialog.py  ollama_client.py  ollama_manager.py  rag_engine.py  requirements.txt  workers.py
gui/ollama_manager/: __init__.py  helpers.py  window.py  workers.py
