[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "ollama-forge"
version         = "1.0.0"
description     = "Local AI GUI — chat, RAG, crews and model management powered by Ollama"
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.10"

keywords = ["ollama", "llm", "ai", "gui", "rag", "local-ai"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "PyQt5>=5.15",
    "requests>=2.31",
    "numpy>=1.24",
    "faiss-cpu>=1.7",
    "sentence-transformers>=2.6",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pyinstaller-hooks-contrib>=2024.0",
]

[project.scripts]
ollama-main = "ollama-main:main"

[tool.setuptools.packages.find]
where = ["gui"]

[tool.setuptools.package-data]
"*" = ["*.png", "*.md"]
