[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ─────────────────────────────────────────────────────────────────────────────
# Project metadata
# ─────────────────────────────────────────────────────────────────────────────

[project]
name            = "ollama-forge"
version         = "1.0.0"
description     = "Local AI toolkit — Ollama CLI manager, PyQt5 GUI chat, and AI DevOps assistant"
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.10"

authors = [
    { name = "dev-boffin-io", url = "https://github.com/dev-boffin-io" },
]

keywords = [
    "ollama", "local-ai", "llm", "rag",
    "pyqt5", "devops", "forge-suite",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]

# ── Core dependencies (ollama-main CLI only) ──────────────────────────────────
dependencies = [
    "requests>=2.28",
    "packaging>=23.0",
]

# ─────────────────────────────────────────────────────────────────────────────
# Optional extras — install per component
#   pip install ollama-forge[gui]
#   pip install ollama-forge[dev-assist]
#   pip install ollama-forge[all]
# ─────────────────────────────────────────────────────────────────────────────

[project.optional-dependencies]

gui = [
    "PyQt5>=5.15",
    "requests>=2.28",
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
    "pypdf>=3.0",
    "python-docx>=1.0",
]

dev-assist = [
    "ollama",
    "pydantic>=2.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "jinja2>=3.1",
    "chainlit>=2.0",
]

all = [
    "ollama-forge[gui]",
    "ollama-forge[dev-assist]",
]

dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
    "black>=24.0",
    "isort>=5.13",
    "pyinstaller>=6.0",
    "pre-commit>=3.0",
]

# ─────────────────────────────────────────────────────────────────────────────
# Entry points
# ─────────────────────────────────────────────────────────────────────────────

[project.scripts]
# rename ollama-main.py → ollama_main.py in project root for this to resolve
ollama-main = "ollama_main:main"

# ─────────────────────────────────────────────────────────────────────────────
# URLs
# ─────────────────────────────────────────────────────────────────────────────

[project.urls]
Homepage   = "https://github.com/dev-boffin-io/ollama-forge"
Repository = "https://github.com/dev-boffin-io/ollama-forge"
Issues     = "https://github.com/dev-boffin-io/ollama-forge/issues"

# ─────────────────────────────────────────────────────────────────────────────
# Package discovery
# ─────────────────────────────────────────────────────────────────────────────

[tool.setuptools]
py-modules = ["ollama_main"]   # root-level single-file CLI module

[tool.setuptools.packages.find]
where   = ["."]
include = ["gui*", "dev_assist*"]
exclude = ["tests*", "builder*", "dist*", "build*"]

# ─────────────────────────────────────────────────────────────────────────────
# Tool configuration
# ─────────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths       = ["dev-assist/tests"]
asyncio_mode    = "auto"
addopts         = "-v --tb=short"

[tool.ruff]
line-length    = 100
target-version = "py310"
src            = [".", "gui", "dev-assist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.black]
line-length    = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile     = "black"
line_length = 100
