[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ─────────────────────────────────────────────────────────────────────────────
[project]
name = "dev-assist"
version = "0.1.0"
description = "Personal AI DevOps Assistant with RAG — Terminal & Web UI"
readme = "chainlit.md"
requires-python = ">=3.9"
license = { text = "MIT" }

# Minimal runtime deps (optional extras below for richer experience)
dependencies = []

[project.optional-dependencies]
# pip install "dev-assist[core]"
core = [
    "pydantic>=2.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "jinja2>=3.1",
    "ollama",
]
# pip install "dev-assist[web]"
web = [
    "chainlit>=1.0",
]
# pip install "dev-assist[rag]"
rag = [
    "sentence-transformers",
]
# pip install "dev-assist[dev]"
dev = [
    "pyinstaller>=6.0",
    "ruff",
    "black",
    "isort",
    "pyright",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
]
# pip install "dev-assist[all]"
all = [
    "dev-assist[core]",
    "dev-assist[web]",
    "dev-assist[rag]",
]

[project.scripts]
# After `pip install -e .` this puts `dev-assist` on PATH
dev-assist = "main:main"

# ─────────────────────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modules*", "plugins*"]

[tool.setuptools.package-data]
"*" = ["config/settings.json", "public/**", ".chainlit/**", "chainlit.md"]

# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
